]11;rgb:2828/2c2c/3434[27;1R]11;rgb:2828/2c2c/3434[27;1R]11;rgb:2828/2c2c/3434[27;1Rupdated

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,10 +8,14 @@ vars:
 
 tasks:
 
-  version:
-    # deps: [build]
+  release:
+    deps:
+      - test-crossplane
+      - test-go
+      - test-helm
     desc: push new version
     cmds:
+      - task: pr
       - sbot release version
       - sbot push version
 
