--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,6 +18,7 @@ tasks:
       - task: pr
       - sbot release version
       - sbot push version
+      - echo released version $(git describe --tags --abbrev=0)
 
   create:
     desc: Create new dagger module
