--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -27,6 +27,17 @@ tasks:
       - jq '.source = "."' dagger.json > tmp.json && mv tmp.json dagger.json
       - mv dagger.json ./{{ .MODULE }}/dagger.json
 
+  test-ansible:
+    desc: Test ansible modules
+    cmds:
+      - dagger call -m ./{{ .MODULE }} init-collection --src {{ .TEST_ANSIBLE_CODE }} --namespace={{ .NAMESPACE }} --name={{ .NAME }} --progress plain export --path={{ .OUTPUT_COLLECTION_PACKAGE }}
+    vars:
+      MODULE: ansible
+      TEST_ANSIBLE_CODE: tests
+      NAMESPACE: sthings
+      NAME: test
+      OUTPUT_COLLECTION_PACKAGE: "/tmp/ansible/{{ .NAME }}"
+
   test-crossplane:
     desc: Test crossplame modules
     cmds:
