updated ansible reqrites

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -37,10 +37,11 @@ tasks:
     cmds:
       - dagger call -m ./{{ .MODULE }} init-collection --src {{ .TEST_ANSIBLE_CODE }} --namespace={{ .NAMESPACE }} --name={{ .NAME }} --progress plain export --path={{ .OUTPUT_COLLECTION_FOLDER }}
       - dagger call -m ./{{ .MODULE }} build --src {{ .OUTPUT_COLLECTION_FOLDER }}/{{ .NAMESPACE }}/{{ .NAME }} --progress plain export --path={{ .OUTPUT_COLLECTION_PACKAGE }}
+      - dagger call -m ./{{ .MODULE }} ansible modify-role-includes --src /tmp/ansible/test/sthings/container/ --progress plain export --path /tmp/collection
       - ls -lta {{ .OUTPUT_COLLECTION_PACKAGE }}
     vars:
       MODULE: ansible
-      TEST_ANSIBLE_CODE: tests/ansible/collection #tests
+      TEST_ANSIBLE_CODE: /home/sthings/projects/ansible/ansible/container # tests/ansible/collection #tests
       NAMESPACE: sthings
       NAME: container
       OUTPUT_COLLECTION_FOLDER: "/tmp/ansible/{{ .NAME }}"
