updated galaxy rendering

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -35,9 +35,9 @@ tasks:
   test-ansible:
     desc: Test ansible modules
     cmds:
-      - dagger call -m ./{{ .MODULE }} init-collection --src {{ .TEST_ANSIBLE_CODE }} --namespace={{ .NAMESPACE }} --name={{ .NAME }} --progress plain export --path={{ .OUTPUT_COLLECTION_FOLDER }}
+      - dagger call -m ./{{ .MODULE }} init-collection --src {{ .TEST_ANSIBLE_CODE }} --progress plain export --path={{ .OUTPUT_COLLECTION_FOLDER }}
       - dagger call -m ./{{ .MODULE }} build --src {{ .OUTPUT_COLLECTION_FOLDER }}/{{ .NAMESPACE }}/{{ .NAME }} --progress plain export --path={{ .OUTPUT_COLLECTION_PACKAGE }}
-      - dagger call -m ./{{ .MODULE }} ansible modify-role-includes --src /tmp/ansible/test/sthings/container/ --progress plain export --path /tmp/collection
+      - dagger call -m ./{{ .MODULE }} modify-role-includes --src /tmp/ansible/test/sthings/container/ --progress plain export --path /tmp/collection
       - ls -lta {{ .OUTPUT_COLLECTION_PACKAGE }}
     vars:
       MODULE: ansible
