--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -127,10 +127,12 @@ tasks:
 
   pr:
     desc: Create pull request into main
+    # deps: [lint]
     cmds:
       - task: commit
+      #- unset GITHUB_TOKEN &&   gh auth login --hostname GitHub.com -p https --web
       - gh pr create -t "{{ .BRANCH }}" -b "{{ .BRANCH }} branch into main"
-      - sleep 10s
-      #- gh pr checks $(gh pr list | grep "^[^#;]" | awk '{print $1}') --watch
-      - gh pr merge $(gh pr list | grep "^[^#;]" | awk '{print $1}') --auto --rebase --delete-branch
+      - sleep 20s
+      - gh pr checks $(gh pr list | grep "^[^#;]" | grep '{{ .BRANCH }}' | awk '{print $1}') --watch
+      - gh pr merge $(gh pr list | grep "^[^#;]" | grep '{{ .BRANCH }}' | awk '{print $1}') --auto --rebase --delete-branch
       - git checkout main && git pull
