--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -9,15 +9,15 @@ vars:
 tasks:
   release:
     deps:
-      - test-crossplane
-      - test-go
-      - test-helm
+      # - test-crossplane
+      # - test-go
+      # - test-helm
       - test-ansible
     desc: push new version
     cmds:
       - task: pr
-      - sbot release version
-      - sbot push version
+      - npx semantic-release --dry-run
+      - npx semantic-release --debug --no-ci
       - echo released version $(git describe --tags --abbrev=0)
 
   check:
