--- a/tests/test-chart/Chart.yaml
+++ b/tests/test-chart/Chart.yaml
@@ -22,3 +22,9 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+dependencies:
+  - name: redis
+    alias: redis-stack
+    condition: redis-stack.enabled
+    repository: https://charts.bitnami.com/bitnami
+    version: 17.1.4
