--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -8,13 +8,11 @@ vars:
 
 tasks:
   release:
-    deps:
-      # - test-crossplane
-      - test-go
-      - test-helm
-      - test-ansible
     desc: push new version
     cmds:
+      - task: test-go
+      - task: test-helm
+      - task: test-ansible
       - task: pr
       - npx semantic-release --dry-run
       - npx semantic-release --debug --no-ci
@@ -133,7 +131,6 @@ tasks:
     # deps: [lint]
     cmds:
       - task: commit
-      #- unset GITHUB_TOKEN &&   gh auth login --hostname GitHub.com -p https --web
       - gh pr create -t "{{ .BRANCH }}" -b "{{ .BRANCH }} branch into main"
       - sleep 20s
       #- gh pr checks $(gh pr list | grep "^[^#;]" | grep '{{ .BRANCH }}' | awk '{print $1}') --watch
