--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -60,9 +60,14 @@ tasks:
   create:
     desc: Create new dagger module
     cmds:
-      - dagger init --sdk=go --source=./{{ .MODULE }} --name={{ .MODULE }}
+      - dagger init --sdk=${SDK} --source=./${MODULE_NAME} --name=${MODULE_NAME}
       - jq '.source = "."' dagger.json > tmp.json && mv tmp.json dagger.json
-      - mv dagger.json ./{{ .MODULE }}/dagger.json
+      - mv dagger.json .${MODULE_NAME}/dagger.json
+    vars:
+      MODULE_NAME:
+        sh: gum input --placeholder "Module name"
+      SDK:
+        sh: gum choose "go" "python"
 
   test-ansible:
     desc: Test ansible modules
@@ -111,7 +116,6 @@ tasks:
       OUTPUT_GO_DIR: /tmp/go
       #TEST_IMG_TAR: test.tar
       WORKFLOW_REPORT: /tmp/workflow.json
-
 
   test-helm:
     desc: Test helm modules
