feat: feat/add-crane

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -60,9 +60,9 @@ tasks:
   create:
     desc: Create new dagger module
     cmds:
-      - dagger init --sdk=${SDK} --source=./${MODULE_NAME} --name=${MODULE_NAME}
+      - dagger init --sdk={{ .SDK }} --source=./{{ .MODULE_NAME }} --name={{ .MODULE_NAME }}
       - jq '.source = "."' dagger.json > tmp.json && mv tmp.json dagger.json
-      - mv dagger.json .${MODULE_NAME}/dagger.json
+      - mv dagger.json ./{{ .MODULE_NAME }}/dagger.json
     vars:
       MODULE_NAME:
         sh: gum input --placeholder "Module name"
